--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <div class="wrapper">
 
     <!-- HEADER -->
+
+    <h1>Welcome to Riyadh</h1>
+    
     <!-- SUB HEAD -->
 
     <div id="content">
