--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
 
+      <img src="images/transportation/transit.jpg" alt="Modern Transit">
+
     </div>
   </div>
 </body>
